@@ -5,14 +5,19 @@ import java.net.URLEncoder;
 import java.util.Map;
 
 public class ParameterStringBuilder {
+
+    private static final String UTF_8 = "UTF-8";
+    private static final String EQUALS_SEPARATOR = "=";
+    private static final String AND_SEPARATOR = "&";
+
     public static String getParamsString(Map<String, String> params) throws UnsupportedEncodingException {
         StringBuilder result = new StringBuilder();
 
         for (Map.Entry<String, String> entry : params.entrySet()) {
-            result.append(URLEncoder.encode(entry.getKey(), "UTF-8"));
-            result.append("=");
-            result.append(URLEncoder.encode(entry.getValue(), "UTF-8"));
-            result.append("&");
+            result.append(URLEncoder.encode(entry.getKey(), UTF_8));
+            result.append(EQUALS_SEPARATOR);
+            result.append(URLEncoder.encode(entry.getValue(), UTF_8));
+            result.append(AND_SEPARATOR);
         }
 
         String resultString = result.toString();
